test/MC/SVE/regression-tests/negative_tests/sve-fmov-010.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecD64MovIM
// Immediate not compatible with encode/decode function.
fmov z6.d, p14/m, #0.1128125
// CHECK: error: expected compatible register or floating-point constant
